src/objects/Partner_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>Account_Reference_ID_number__c</fullName>
        <label>Account Reference ID/number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Identifiers</relationshipLabel>
        <relationshipName>Partner_Identifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVM_Partner_Identifier_Id__c</fullName>
        <externalId>true</externalId>
        <label>EVM Partner Identifier Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number_Type__c</fullName>
        <label>ID/Number Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Ex Ref ID Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;B Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITSITIO Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Customer Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Enterprise Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Partner Membership ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold To Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partner Identifier</label>
    <nameField>
        <label>Partner Identifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>